# riparian_region_growing

./: CMakeLists.txt  README.md
include/riparian_region_growing/: point_channel.h  reli.h  riparian_grower.h  riparian_grower.hpp
src/: growing_test.cpp  riparian_grower.cpp
